--- a/project0/search/indexImage.html
+++ b/project0/search/indexImage.html
@@ -4,7 +4,7 @@
         <title>Search</title>
     </head>
     <body>
-        <a href="./indexImage.html">Google Image Search</a>    
+        <a href="./index.html">Google Search</a>    
         <a href="./indexAdvance.html">Google Advance Search</a>     
         <br>
         <form action="https://google.com/search">
