--- a/project0/search/indexAdvance.html
+++ b/project0/search/indexAdvance.html
@@ -4,8 +4,9 @@
         <title>Search</title>
     </head>
     <body>
+        <a href="./index.html">Google Search</a>     
+
         <a href="./indexImage.html">Google Image Search</a>    
-        <a href="./indexAdvance.html">Google Advance Search</a>     
         <br>
         <form action="https://google.com/search">
             <input type="text" name="q">
